fixed display of navbar on mobile devices

--- a/src/resources/css/app.css
+++ b/src/resources/css/app.css
@@ -69,10 +69,11 @@ h4 {
 a:hover{
     color: #009BEB;
 }
-.wrapper {
+.layout>.wrapper {
     width: 100%;
-    margin-left: 4rem;
-    margin-right: auto;
+    overflow-y: auto;
+    height: var(--vh);
+    position: relative;
 }
 p {
     color: #EEECF1;
@@ -102,10 +103,9 @@ p {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    position: fixed;
+    position: relative;
     line-height: 16px;
     display: flex;
-    height: 100vh;
     box-shadow: 12px 0px 20px rgb(0 0 0 / 9%);
 }
 .nav-icon {
@@ -242,7 +242,10 @@ p {
     fill: #fff
 }
 .layout {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    min-height: var(--vh);
     overflow: hidden;
 }
 .card {
@@ -284,9 +287,7 @@ p {
         -webkit-box-flex: 1;
         -ms-flex: 1 1 auto;
         flex: 1 1 auto;
-    }
-    .wrapper{
-        margin-left: auto;
+        height: 1px;
     }
     .navbar {
         width: 100%;
@@ -317,12 +318,6 @@ p {
         -ms-flex-direction: row;
         flex-direction: row;
         width: 100%;
-        height: 100%;
-        position: fixed;
-        z-index: 9999;
-        top: calc(100vh - 4rem);
-        overflow-x: hidden;
-        overflow-y: hidden;
     }
     .navigation>.logo {
         border-bottom: none;
@@ -416,22 +411,17 @@ p {
     display: none;
 }
 .page-header {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
+    position: -webkit-sticky;
     position: sticky;
     width: 100%;
     height: 72px;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
     justify-content: space-between;
     border-bottom: 1px solid #282828;
-    -webkit-transition: background-color .1s ease-in, top .2s ease-in, border-bottom-color .3s ease-in;
     transition: background-color .1s ease-in, top .2s ease-in, border-bottom-color .3s ease-in;
-    z-index: 99
+    z-index: 99;
+
 }
 .page-header.show,
 .page-header.top {
@@ -893,9 +883,6 @@ p {
 }
 .header-user-menu>.line.exit {
     border-top: 1px solid rgba(61, 64, 74, .4)
-}
-#app{
-    overflow: hidden;
 }
 .slide-fade-enter-active {
     transition: all .2s ease-out;
